fixing layout issues

--- a/flashcard/website/static/album.css
+++ b/flashcard/website/static/album.css
@@ -21,7 +21,7 @@
 }
 
 .jumbotron .container {
-  max-width: 36rem;
+  /* max-width: 36rem; */
 }
 
 
